# cards-client-rs

./: .gitignore  .travis.yml  Caddyfile  Cargo.toml  LICENSE_MIT  README.md  build.rs  package-lock.json  package.json  webpack.config.js
src/: app.rs  constants.rs  html.rs  lib.rs  routes.rs  state.rs
src/agents/: game_mgr.rs  game_ws_mgr.rs  mod.rs  notification_bus.rs  notifications.rs  state_mgr.rs
src/components/: mod.rs  navbar.rs  neq_assign.rs  notifications.rs  ws_dbg_console.rs
src/pages/: create_game.rs  index.rs  joining_game.rs  list_games.rs  mod.rs  not_found.rs  play_game.rs  ws_experiment.rs
src/services/: game_server.rs
src/wire/: mod.rs
web/: index.html  index.js
web/scss/: base.scss  bulma.scss  index.scss
