[package]
name = "cards-client-rs"
description = ""
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
anyhow = "1"
derive_more = "0.99"
log = "0.4"
strum = "0.18"
strum_macros = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
# yew = "0.16"
# yew-router = "0.12"
# yew = { git = "https://github.com/yewstack/yew", branch = "v0.16.0" }
# yew-router = { git = "https://github.com/yewstack/yew", branch = "v0.16.0" }
yew = { path = "../yew/yew" }
yew-router = { path = "../yew/yew-router" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
# This feature is enabled by default.
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling
# slower, so it's only enabled in release mode.
lto = true
