[package]
name = "cards-client-rs"
description = ""
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
anyhow = "1"
console_log = { version = "0.2", features = ["color"] }
derive_more = "0.99"
fern = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew", branch = "master" }
yew-router = { git = "https://github.com/yewstack/yew", branch = "master" }
yewtil = { git = "https://github.com/yewstack/yew", branch = "master" }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
# This feature is enabled by default.
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Location",
    "Url",
    "Window",
]

[dev-dependencies]
futures = "0.3"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[build-dependencies]
git2 = "0.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling
# slower, so it's only enabled in release mode.
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
